<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="250dp"
	android:layout_height="wrap_content"
	android:background="@color/background_app"
	android:orientation="vertical"
	android:padding="16dp">

	<EditText
		android:id="@+id/etTaskName"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:autofillHints="name"
		android:backgroundTint="@color/white"
		android:hint="@string/addTaskHint"
		android:inputType="text"
		android:textColor="@color/white"
		android:textColorHint="@color/white" />

	<RadioGroup
		android:id="@+id/rgTaskCategory"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content">

		<RadioButton
			android:id="@+id/rbTaskBusiness"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:buttonTint="@color/todo_business_category"
			android:checked="true"
			android:text="@string/business"
			android:textColor="@color/white" />


		<RadioButton
			android:id="@+id/rbTaskPersonal"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:buttonTint="@color/todo_personal_category"
			android:checked="true"
			android:text="@string/personal"
			android:textColor="@color/white" />

		<RadioButton
			android:id="@+id/rbTaskOther"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:buttonTint="@color/todo_other_category"
			android:checked="true"
			android:text="@string/other"
			android:textColor="@color/white" />
	</RadioGroup>

	<Button
		android:id="@+id/btnAddTask"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:backgroundTint="@color/todo_accent"
		android:text="@string/create_task" />
</LinearLayout>