<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:layout_marginHorizontal="16dp"
	android:layout_marginVertical="12dp"
	android:orientation="vertical"
	tools:context=".MenuActivity">

	<Button
		android:id="@+id/btnGoToNameApp"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_gravity="center_horizontal"
		android:text="@string/goto_nameapp" />

	<Button
		android:id="@+id/btnGoToIMCApp"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_gravity="center_horizontal"
		android:text="@string/goto_imcapp" />

	<Button
		android:id="@+id/btnGoToTODOApp"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_gravity="center_horizontal"
		android:text="@string/goto_todoapp" />

</LinearLayout>